<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="server_has_not_started">Git server has not started</string>
    <string name="server_has_started">Git server has started</string>
    <string name="start_server">Start</string>
    <string name="stop_server">Stop</string>
    <string name="password">Password</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="disable_auto_start">Disable auto start</string>
    <string name="follow_system_boot">After system boot</string>
    <string name="when_wifi_on">When connected to wifi</string>
    <string name="when_wifi_hotspot">When wifi hotspot has started</string>
    <string name="error">Error</string>
    <string name="rename_to_exist_group">Cannot rename to group name, because it has existed</string>
    <string name="rename_to_exist_user">Cannot rename to user name, because it has existed</string>
    <string name="rename_to_exist_repo">Cannot rename to repository path, because it has existed</string>
    <string name="preferences">Preferences</string>
    <string name="user_manager">User manager</string>
    <string name="repo_manager">Repo manager</string>
    <string name="group_manager">User group manager</string>
    <string name="repo_cleanup">Cleanup repositories</string>
    <string name="new_repo">New repository</string>
    <string name="new_group">New user group</string>
    <string name="new_user">New user</string>
    <string name="permission_request">Permission request</string>
    <string name="permission_request_info">App need write external file permission to save repositories and other setting files.</string>
    <string name="permission_request_fail">Request permission fail, so it will not to write external files.</string>
    <string name="new_permission">New permission</string>
    <string name="edit_permission">Edit permission</string>
    <string name="manager_password">Manage password</string>
    <string name="base_info">Base information</string>
    <string name="group_name">Group name</string>
    <string name="group_alias_name">Group alias name</string>
    <string name="description">Description</string>
    <string name="group_members">Group members</string>
    <string name="edit_group_members">Edit group members</string>
    <string name="info">Information</string>
    <string name="version">Version</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="listening_port">Listening port</string>
    <string name="auto_start">Auto start service</string>
    <string name="security_setting">Security setting</string>
    <string name="readme_content">README file content</string>
    <string name="gitignore_content">.gitignore file content</string>
    <string name="work_path">Work path</string>
    <string name="user_alias_name">User alias name</string>
    <string name="is_admin">Is admin</string>
    <string name="repo_path">Repository path</string>
    <string name="repo_name">Repository name</string>
    <string name="permissions">Permissions</string>
    <string name="credential">Credential</string>
    <string name="credential_summary">Set credential</string>
    <string name="password_summary">Set password</string>
    <string name="password_auth">Password authentication</string>
    <string name="password_auth_summary">Enable password authentication</string>
    <string name="group_name_summary">Set group name</string>
    <string name="group_alias_name_summary">Set group alias name</string>
    <string name="description_summary">Set description</string>
    <string name="repo_path_summary">Set repository path</string>
    <string name="repo_name_summary">Set repository name</string>
    <string name="username_summary">Set username</string>
    <string name="user_alias_name_summary">Set user alias name</string>
    <string name="email_summary">Set email</string>
    <string name="is_admin_summary">Enable admin operation (scp etc.)</string>
    <string name="server_config">Server config</string>
    <string name="work_path_summary">Set work path</string>
    <string name="listening_port_summary">Set server listening port</string>
    <string name="auto_start_summary">Set server auto start behavior</string>
    <string name="password_protection">Password protection</string>
    <string name="password_protection_summary">Ask password when open app</string>
    <string name="manager_password_summary">Set manage password</string>
    <string name="init_username">Init username</string>
    <string name="init_username_summary">Set username to init repository</string>
    <string name="init_email">Init email</string>
    <string name="init_email_summary">Set email of init username</string>
    <string name="init_commit_message">Init commit message</string>
    <string name="init_commit_message_summary">Set commit message when init repository</string>
    <string name="readme_content_summary">Set readme file content when init repository</string>
    <string name="gitignore_content_summary">Set .gitignore file content when init repository</string>
    <string name="targets">Targets</string>
    <string name="applied_groups">User groups to apply</string>
    <string name="applied_groups_summary">Set user groups to match this rule</string>
    <string name="applied_users">Users to apply</string>
    <string name="applied_users_summary">Set users to match this rule</string>
    <string name="excluded_users">Users to exclude</string>
    <string name="excluded_users_summary">Set excludes users</string>
    <string name="rules">Rules</string>
    <string name="branch_match">Branch match</string>
    <string name="branch_match_summary">Set branch match with regular expression</string>
    <string name="readable">Readable</string>
    <string name="readable_summary">Enable read permission on the branch matched this rule</string>
    <string name="writable">Writable</string>
    <string name="writable_summary">Enable write permission on the branch matched this rule</string>
    <string name="creatable">Creatable</string>
    <string name="creatable_summary">Enable create the branch matched this rule</string>
    <string name="deletable">Deletable</string>
    <string name="deletable_summary">Enable delete the branch matched this rule</string>
    <string name="pushable">Force pushable</string>
    <string name="pushable_summary">Enable force push to the branch matched this rule</string>
</resources>
